# plantillaNotas

./: .cursorrules.md  .gitignore  ACTUALIZACION_INDEX.md  ANALYSIS_FIX_CORRECTO.md  APP_LOCAL.md  CHECKLIST_SETUP.md  CLAUDE.md  DOCUMENTACION_APP_LOCAL_ELECTRON.md  PASOS_RAPIDOS.md  QUICKSTART.md  README.md  RESUMEN_EJECUTIVO.md  STATUS_FINAL.md  TAURI_MIGRACION.md  app-bridge.js  diario.html  empaquetar.bat  gestor-alumnos.html  gestor-notas.html  gestor-rraa-criterios.html  gestor-unidades.html  incluir-actividad.html  index.html  informes.html  main.js  package-lock.json  package.json  preload.js  tauri-node-backend.js  visor-actividades.html  visor-notas.html  visor-unidades.html
.claude/: settings.json  settings.local.json
Copiaseguridadinicial/: CLAUDE.md  _routes.json  empaquetar.sh  gestor-alumnos.html  gestor-notas.html  gestor-rraa-criterios.html  index.html  main.js  visor-actividades.html  visor-notas.html
Documentacion/: CHECKLIST_SETUP.md  GUIA_EMPAQUETADO.md  GUIA_TECNICA_ANDROID.md  INSTRUCCIONES_GITHUB.md  MAPA_PROYECTO.md  OPTIMIZACIONES_RENDIMIENTO.md  README.md  README_PROYECTO.md  RESUMEN_EJECUTIVO.md  TAURI_MIGRACION.md  arreglar_cuello.md
copiaSeguridadFinal/: STATUS_FINAL.md  gestor-notas.html  gestor-unidades.html  index.html  informes.html  main.js  package-lock.json  visor-actividades.html  visor-notas.html  visor-unidades.html
copiaseguridad/: Cargo.toml  main.rs
copiaseguridad/diario_20260510_070110/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
(+2 files in other folders)
