[package]
name = "plantilla-notas-local"
version = "0.1.0"
description = "Aplicacion local para gestionar una plantilla Excel de notas."
authors = ["Sebantonio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
webbrowser = "1"
